finsihed styling with media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <!-- <div class="wrapper"> -->
+  <div class="wrapper">
     <div class="cont cont-1">
       <div class="logo">
         <img src="/images/logo.svg" alt="" class="cont-1-img">
@@ -27,7 +27,7 @@
     </div>
 
     <div class="cont cont-2">
-      <p class="cont-2-p">You've used <span>815 Gb</span>of your storage</p>
+      <p class="cont-2-p">You've used <span>815 Gb</span> of your storage</p>
       <div class="bar">
         <div class="bar2"></div>
       </div>
@@ -40,7 +40,7 @@
         <p>185<span>Gb Left</span></p>
       </div>
     </div>
-  <!-- </div> -->
+  </div>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
